--- a/index.html
+++ b/index.html
@@ -1,32 +1,39 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>My Digital Visiting Card</title>
-  <link rel="stylesheet" href="style.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Sathya Narayana Portfolio</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background: #f5f5f5;
+      color: #333;
+      text-align: center;
+      padding: 40px;
+    }
+    img {
+      width: 150px;
+      border-radius: 50%;
+      margin-bottom: 20px;
+    }
+    a.button {
+      display: inline-block;
+      padding: 10px 20px;
+      margin: 10px;
+      background-color: #007bff;
+      color: #fff;
+      text-decoration: none;
+      border-radius: 5px;
+    }
+  </style>
 </head>
 <body>
-  <div class="card">
-    <img src="photo.jpg" alt="Your Photo" class="profile">
-    <h1>Palem Sathyanarayana</h1>
-    <p>BTech ECE Graduate | Web Developer</p>
-    <p>Email: palemsathipalem@gmail.com</p>
-    <p>GitHub: <a href="https://github.com/PALEMSATHYANARAYANA26" target="_blank">My GitHub</a></p>
-
-    <!-- 🎤 Audio Intro -->
-    <button onclick="playAudio()">🎤 Hear My Introduction</button>
-    <audio id="audioIntro" src="converted_voice.mp3" autoplay></audio>
-
-    <!-- 📱 QR Code -->
-    <h3>📱 Scan this QR to open my card</h3>
-    <img src="qrcode.png" alt="QR Code" class="qr">
-  </div>
-
-  <script>
-    function playAudio() {
-      const audio = document.getElementById("audioIntro");
-      audio.play();
-    }
-  </script>
+  <h1>Hello, I'm Sathya Narayana</h1>
+  <p>Recent B.Tech graduate from SNIST, passionate about software development.</p>
+  <img src="photo.jpg" alt="Profile Photo">
+  <br>
+  <a href="resume.pdf" class="button" download>Download My Resume</a>
 </body>
 </html>
